--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-multipart==0.0.9
-pandas==2.2.2
-numpy==1.26.4
+uvicorn==0.30.6
+python-multipart==0.0.6
+pandas==2.1.4
+numpy==1.25.2
 streamlit==1.38.0
 requests==2.32.3
