--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-python-multipart==0.0.6
+fastapi==0.115.6
+uvicorn[standard]==0.32.0
+pandas==2.2.2
 numpy==1.26.4
-pandas==2.0.3
-streamlit==1.38.0
-requests==2.32.3
